--- a/Allen-dino-refactored/config.json
+++ b/Allen-dino-refactored/config.json
@@ -1,3 +1,4 @@
 {
-    "cache_path": "/media/maria/DATA/AllenData"
+    "cache_path": "/media/maria/DATA/AllenData",
+    "save_path": "/media/maria/DATA/BrainObservatoryProcessedData"
 }
